# SearchOS

./: .env.example  .gitattributes  .gitignore  CONTEXT.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  index.html  install.sh  pyproject.toml
baselines/: __init__.py
baselines/gpt-oss-simple-browser/: README.md  __init__.py  __main__.py  agent.py  batch.py  config.py  main.py  models.py  state.py
baselines/gpt-oss-simple-browser/llm/: __init__.py  base.py  claude_llm.py  openai_llm.py
baselines/gpt-oss-simple-browser/tools/: __init__.py  browser.py  html_processor.py  search.py  tool_defs.py
datasets/GISA/: README.md  encrypted_question.jsonl  gisa_100.jsonl
datasets/GISA/GISA-main/: LICENSE  README.md  index.html  script.js  styles.css
datasets/GISA/answer/: 1.csv  10.csv  100.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  136.csv  137.csv  138.csv  (+318 more)
datasets/GISA/trace/: 1.json  10.json  100.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  136.json  137.json  138.json  (+332 more)
datasets/browsecomp/: 128_samples.jsonl  128_samples_predictions.jsonl  decode_browsecomp.py  test_decoded.jsonl  test_decrypted.jsonl
datasets/browsecomp_zh/: browsecomp-zh-decrypt-parquet.py  test.jsonl  test.parquet
datasets/frames/: test.jsonl
datasets/utils/: process_datasets.py
datasets/widesearch/: LICENSE  README.md
datasets/widesearch/widesearch_gold/: ws_en_001.csv  ws_en_021.csv  ws_en_022.csv  ws_en_023.csv  ws_en_024.csv  ws_en_025.csv  ws_en_026.csv  ws_en_027.csv  ws_en_028.csv  ws_en_029.csv  ws_en_030.csv  ws_en_031.csv  ws_en_032.csv  ws_en_033.csv  ws_en_034.csv  ws_en_035.csv  ws_en_036.csv  ws_en_037.csv  ws_en_038.csv  ws_en_039.csv  ws_en_040.csv  ws_en_041.csv  (+138 more)
docs/: README.ja.md  README.ko.md  README.zh.md  configuration.md  installation.md  providers.md  tui-textual-redesign.md  webui-improvement-plan.md
docs/zh/: configuration.md  installation.md  providers.md
eval/: EXPERIMENTS.md  aggregate_runs.py  extract_from_orchestrator.py  preprocess.py  preview_preprocess.py  re_reformat_and_rescore.py  rescore.py  run.py  runner.py
eval/benchmarks/: gisa.py  widesearch.py  xbench.py
eval/reformat/: __init__.py  core.py  gisa.py  widesearch.py
eval/scorers/: gisa_official.py
searchos/: __init__.py  __main__.py  cli.py
searchos/agents/: __init__.py  runtime.py  temporal.py  toolset_render.py
searchos/config/: __init__.py  effort.py  env_file.py  model_config.py  models.py  profiles.py  providers.py  settings.py  setup_wizard.py  web_overlay.py
searchos/harness/: blueprint.py  repair_planner.py  session.py
searchos/skills/: __init__.py
searchos/socm/: __init__.py  coverage.py  evidence.py  frontier.py  state.py  strategy.py  workspace.py
searchos/tools/: __init__.py  schema.py  search_state.py  skill_catalog.py  socm_read.py  tasks.py  writer.py
searchos/tui/: __init__.py  app.py  config_modal.py  dashboard.py  widgets.py
searchos/util/: __init__.py  base_model.py  coerce.py  json_extract.py  llm_rate_limiter.py  span_match.py  token_tracker.py
tests/: conftest.py  test_env_file.py  test_evidence_grounding.py  test_evidence_intake.py  test_explore_batch.py  test_history_assets.py  test_installation_contract.py  test_llm_rate_limiter.py  test_model_config.py  test_provider_config.py  test_repair_planner.py  test_search_episode_context.py  test_search_provider.py  test_setup_wizard.py  test_skill_execution_security.py  test_source_controls.py  test_temporal_grounding.py  test_tool_trajectory_payloads.py  test_tui_config.py  test_turn_snapshots.py  test_web_diagnostics.py  test_web_evidence_resolution.py  test_web_overlay.py  test_web_repair_api.py  test_web_settings_api.py
web/: start.sh
web/api/: deps.py  main.py  settings_store.py  settings_views.py  skills_catalog.py
web/frontend/: DESIGN.md  next.config.ts  package-lock.json  package.json
(+182 files in other folders)
